--- a/EorzeaTime/EorzeaTime.entitlements
+++ b/EorzeaTime/EorzeaTime.entitlements
@@ -2,9 +2,14 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <key>com.apple.security.app-sandbox</key>
+    <key>aps-environment</key>
+    <string>development</string>
+    <key>com.apple.developer.live-activity</key>
     <true/>
-    <key>com.apple.security.files.user-selected.read-only</key>
-    <true/>
+    <key>com.apple.developer.background-modes</key>
+    <array>
+        <string>fetch</string>
+        <string>remote-notification</string>
+    </array>
 </dict>
 </plist>
