--- a/EorzeaTime/Info.plist
+++ b/EorzeaTime/Info.plist
@@ -2,6 +2,14 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+    <key>CFBundleDisplayName</key>
+    <string>EorzeaTime</string>
+    <key>CFBundleIdentifier</key>
+    <string>com.bondcodes.EorzeaTime</string>
+    <key>CFBundleVersion</key>
+    <string>1</string>
+    <key>CFBundleShortVersionString</key>
+    <string>1.0</string>
     <key>NSSupportsLiveActivities</key>
     <true/>
     <key>UIBackgroundModes</key>
@@ -9,9 +17,7 @@
         <string>fetch</string>
         <string>remote-notification</string>
     </array>
-    <key>NSUserTrackingUsageDescription</key>
-    <string>We use this information to track your activity</string>
     <key>NSPushNotificationsUsageDescription</key>
-    <string>We use notifications to keep you informed</string>
+    <string>We use notifications to keep you informed.</string>
 </dict>
 </plist>
